env/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  template:
    spec:
      containers:
        - name: dpl
          volumeMounts:
            - name: nginx-conf
              subPath: nginx.conf
              mountPath: /etc/nginx/nginx.conf
            - name: log4j2-conf
              subPath: log4j2.xml
              mountPath: /app/log4j2.xml
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-env
        - name: log4j2-conf
          configMap:
            name: log4j2-env
